install (FILES style.css 				DESTINATION ${DATADIR}/ui/)
install (FILES first-run-window.ui 		DESTINATION ${DATADIR}/ui/)
install (FILES tweet-info-window.ui 	DESTINATION ${DATADIR}/ui/)
install (FILES menu.ui 					DESTINATION ${DATADIR}/ui/)
install (FILES settings-dialog.ui 		DESTINATION ${DATADIR}/ui/)
install (FILES connection-lost-dialog.ui 		DESTINATION ${DATADIR}/ui/)
