


symbolicsdir = $(prefix)/share/corebird/assets/

symbolics_DATA = \
								corebird-conversation-symbolic.svg \
								corebird-dms-symbolic.svg          \
								corebird-lists-symbolic.svg        \
								corebird-location-symbolic.svg     \
								corebird-mentions-symbolic.svg     \
								corebird-reply-symbolic.svg        \
								corebird-retweet-symbolic.svg      \
								corebird-search-symbolic.svg       \
								corebird-stream-symbolic.svg       \
								corebird-filter-symbolic.svg       \
								corebird-favorite-symbolic.svg     \
								corebird-down-symbolic.svg
EXTRA_DIST = $(symbolics_DATA)
