


symbolicsdir = $(prefix)/share/corebird/assets/hicolor/scalable/actions/

symbolics_DATA = \
                                                                corebird-compose-symbolic.svg \
								corebird-conversation-symbolic.svg \
								corebird-location-symbolic.svg     \
								corebird-mentions-symbolic.svg     \
								corebird-retweet-symbolic.svg
EXTRA_DIST = $(symbolics_DATA)
