


symbolicsdir = $(prefix)/share/corebird/assets/hicolor/scalable/actions/

symbolics_DATA = \
								corebird-compose-symbolic.svg      \
								corebird-mentions-symbolic.svg     \
								corebird-retweet-symbolic.svg      \
								corebird-new-window-symbolic.svg   \
								corebird-filter-symbolic.svg       \
								corebird-conversation-symbolic.svg \
								corebird-dms-symbolic.svg
EXTRA_DIST = $(symbolics_DATA)
